{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 765,
  "lineage": "06959fc8-eec3-1b6b-6b76-5fbfc96ec978",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dut_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e56d56ab1f2e6308",
            "associate_with_private_ip": "198.18.60.10",
            "association_id": "eipassoc-05853a9af793a0d4c",
            "domain": "vpc",
            "id": "eipalloc-0e56d56ab1f2e6308",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04836c07b3e0c730b",
            "private_dns": "ip-198-18-60-10.ec2.internal",
            "private_ip": "198.18.60.10",
            "public_dns": "ec2-50-17-97-19.compute-1.amazonaws.com",
            "public_ip": "50.17.97.19",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.di_0",
            "aws_security_group.xdp_sg",
            "aws_subnet.xdp_public_subnet",
            "aws_vpc.xdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "trex_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8932b51f23c0626",
            "associate_with_private_ip": "198.18.60.11",
            "association_id": "eipassoc-0e5002c5baee9df29",
            "domain": "vpc",
            "id": "eipalloc-0a8932b51f23c0626",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05c1c706b61f57687",
            "private_dns": "ip-198-18-60-11.ec2.internal",
            "private_ip": "198.18.60.11",
            "public_dns": "ec2-54-174-201-115.compute-1.amazonaws.com",
            "public_ip": "54.174.201.115",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.ti_0",
            "aws_security_group.xdp_sg",
            "aws_subnet.xdp_public_subnet",
            "aws_vpc.xdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "trex",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0574da719dca65348",
            "arn": "arn:aws:ec2:us-east-1:152657297141:instance/i-045730b1e8fff9663",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 36,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045730b1e8fff9663",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5n.18xlarge",
            "ipv6_address_count": 0,
            "key_name": "xdp681us",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-05c1c706b61f57687"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-0b61315eb59b73956"
              },
              {
                "delete_on_termination": false,
                "device_index": 2,
                "network_card_index": 0,
                "network_interface_id": "eni-0b1f879995a634171"
              }
            ],
            "placement_group": "xdp-pg",
            "primary_network_interface_id": "eni-05c1c706b61f57687",
            "private_dns": "ip-198-18-60-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "198.18.60.11",
            "public_ip": "54.174.201.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09268f4ee3aa6fbc1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07fe9e8a605e297da",
            "tags": {
              "Name": "tRex"
            },
            "tags_all": {
              "Name": "tRex"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005120b4f92a7a2ad"
            ]
          },
          "dependencies": [
            "aws_network_interface.ti_0",
            "aws_network_interface.ti_1",
            "aws_network_interface.ti_2",
            "aws_placement_group.xdp_pg",
            "aws_security_group.xdp_sg",
            "aws_subnet.xdp_private_subnet1",
            "aws_subnet.xdp_private_subnet2",
            "aws_subnet.xdp_public_subnet",
            "aws_vpc.xdp_vpc",
            "data.template_file.install_tools",
            "data.template_file.install_trex"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "xdp_dut",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0574da719dca65348",
            "arn": "arn:aws:ec2:us-east-1:152657297141:instance/i-0978976c9dee34022",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 36,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0978976c9dee34022",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5n.18xlarge",
            "ipv6_address_count": 0,
            "key_name": "xdp681us",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-04836c07b3e0c730b"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-04e088255b3c36df2"
              },
              {
                "delete_on_termination": false,
                "device_index": 2,
                "network_card_index": 0,
                "network_interface_id": "eni-05a13d2e316d5a2ec"
              }
            ],
            "placement_group": "xdp-pg",
            "primary_network_interface_id": "eni-04836c07b3e0c730b",
            "private_dns": "ip-198-18-60-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "198.18.60.10",
            "public_ip": "50.17.97.19",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03cbb7e7d671dcab4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07fe9e8a605e297da",
            "tags": {
              "Name": "xdp-DUT"
            },
            "tags_all": {
              "Name": "xdp-DUT"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005120b4f92a7a2ad"
            ]
          },
          "dependencies": [
            "aws_network_interface.di_0",
            "aws_network_interface.di_1",
            "aws_network_interface.di_2",
            "aws_placement_group.xdp_pg",
            "aws_security_group.xdp_sg",
            "aws_subnet.xdp_private_subnet1",
            "aws_subnet.xdp_private_subnet2",
            "aws_subnet.xdp_public_subnet",
            "aws_vpc.xdp_vpc",
            "data.template_file.install_tools",
            "data.template_file.linux_source"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "xdp_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152657297141:internet-gateway/igw-0eb2621c0c63cbdbf",
            "id": "igw-0eb2621c0c63cbdbf",
            "owner_id": "152657297141",
            "tags": {
              "Name": "xdp-internet-gateway"
            },
            "tags_all": {
              "Name": "xdp-internet-gateway"
            },
            "vpc_id": "vpc-008e074806b4a54e9"
          },
          "dependencies": [
            "aws_vpc.xdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "di_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152657297141:network-interface/eni-04836c07b3e0c730b",
            "id": "eni-04836c07b3e0c730b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:d3:4c:25:e1:fb",
            "owner_id": "152657297141",
            "private_ip": "198.18.60.10",
            "private_ip_list": [
              "198.18.60.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "198.18.60.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-005120b4f92a7a2ad"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07fe9e8a605e297da",
            "tags": {
              "Name": "DUT Int 0"
            },
            "tags_all": {
              "Name": "DUT Int 0"
            }
          },
          "dependencies": [
            "aws_security_group.xdp_sg",
            "aws_subnet.xdp_public_subnet",
            "aws_vpc.xdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "di_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152657297141:network-interface/eni-04e088255b3c36df2",
            "id": "eni-04e088255b3c36df2",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:f6:dd:42:3c:df",
            "owner_id": "152657297141",
            "private_ip": "198.18.1.10",
            "private_ip_list": [
              "198.18.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "198.18.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-005120b4f92a7a2ad"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-01a5837997b3f1809",
            "tags": {
              "Name": "DUT Int 1"
            },
            "tags_all": {
              "Name": "DUT Int 1"
            }
          },
          "dependencies": [
            "aws_security_group.xdp_sg",
            "aws_subnet.xdp_private_subnet1",
            "aws_vpc.xdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "di_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152657297141:network-interface/eni-05a13d2e316d5a2ec",
            "id": "eni-05a13d2e316d5a2ec",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:e6:0b:d2:c1:c5",
            "owner_id": "152657297141",
            "private_ip": "198.18.2.10",
            "private_ip_list": [
              "198.18.2.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "198.18.2.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-005120b4f92a7a2ad"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-01ede93befb2d3bbe",
            "tags": {
              "Name": "DUT Int 2"
            },
            "tags_all": {
              "Name": "DUT Int 2"
            }
          },
          "dependencies": [
            "aws_security_group.xdp_sg",
            "aws_subnet.xdp_private_subnet2",
            "aws_vpc.xdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ti_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152657297141:network-interface/eni-05c1c706b61f57687",
            "id": "eni-05c1c706b61f57687",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:74:f6:5b:65:4f",
            "owner_id": "152657297141",
            "private_ip": "198.18.60.11",
            "private_ip_list": [
              "198.18.60.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "198.18.60.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-005120b4f92a7a2ad"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07fe9e8a605e297da",
            "tags": {
              "Name": "tRex Int 0"
            },
            "tags_all": {
              "Name": "tRex Int 0"
            }
          },
          "dependencies": [
            "aws_security_group.xdp_sg",
            "aws_subnet.xdp_public_subnet",
            "aws_vpc.xdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ti_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152657297141:network-interface/eni-0b61315eb59b73956",
            "id": "eni-0b61315eb59b73956",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:f9:72:2b:ec:b3",
            "owner_id": "152657297141",
            "private_ip": "198.18.1.11",
            "private_ip_list": [
              "198.18.1.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "198.18.1.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-005120b4f92a7a2ad"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-01a5837997b3f1809",
            "tags": {
              "Name": "tRex Int 1"
            },
            "tags_all": {
              "Name": "tRex Int 1"
            }
          },
          "dependencies": [
            "aws_security_group.xdp_sg",
            "aws_subnet.xdp_private_subnet1",
            "aws_vpc.xdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ti_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152657297141:network-interface/eni-0b1f879995a634171",
            "id": "eni-0b1f879995a634171",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:79:c6:e5:4f:ad",
            "owner_id": "152657297141",
            "private_ip": "198.18.2.11",
            "private_ip_list": [
              "198.18.2.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "198.18.2.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-005120b4f92a7a2ad"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-01ede93befb2d3bbe",
            "tags": {
              "Name": "tRex Int 2"
            },
            "tags_all": {
              "Name": "tRex Int 2"
            }
          },
          "dependencies": [
            "aws_security_group.xdp_sg",
            "aws_subnet.xdp_private_subnet2",
            "aws_vpc.xdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "xdp_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152657297141:route-table/rtb-0cc5dad542019fa35",
            "id": "rtb-0cc5dad542019fa35",
            "owner_id": "152657297141",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb2621c0c63cbdbf",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb2621c0c63cbdbf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xdp-public-route-table"
            },
            "tags_all": {
              "Name": "xdp-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-008e074806b4a54e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.xdp_ig",
            "aws_vpc.xdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "xdp_public_1_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032fcd1f72ea62a80",
            "route_table_id": "rtb-0cc5dad542019fa35",
            "subnet_id": "subnet-07fe9e8a605e297da"
          },
          "dependencies": [
            "aws_internet_gateway.xdp_ig",
            "aws_route_table.xdp_public_rt",
            "aws_subnet.xdp_public_subnet",
            "aws_vpc.xdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "xdp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152657297141:security-group/sg-005120b4f92a7a2ad",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005120b4f92a7a2ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ping",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "For security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "PING and SSH",
            "name_prefix": "",
            "owner_id": "152657297141",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-008e074806b4a54e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.xdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "xdp_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152657297141:subnet/subnet-01a5837997b3f1809",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "198.18.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a5837997b3f1809",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152657297141",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xdp-private-subnet1"
            },
            "tags_all": {
              "Name": "xdp-private-subnet1"
            },
            "vpc_id": "vpc-008e074806b4a54e9"
          },
          "dependencies": [
            "aws_vpc.xdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "xdp_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152657297141:subnet/subnet-01ede93befb2d3bbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "198.18.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ede93befb2d3bbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152657297141",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xdp-private-subnet2"
            },
            "tags_all": {
              "Name": "xdp-private-subnet2"
            },
            "vpc_id": "vpc-008e074806b4a54e9"
          },
          "dependencies": [
            "aws_vpc.xdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "xdp_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152657297141:subnet/subnet-07fe9e8a605e297da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "198.18.60.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fe9e8a605e297da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152657297141",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xdp-public-subnet"
            },
            "tags_all": {
              "Name": "xdp-public-subnet"
            },
            "vpc_id": "vpc-008e074806b4a54e9"
          },
          "dependencies": [
            "aws_vpc.xdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "xdp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152657297141:vpc/vpc-008e074806b4a54e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "198.18.0.0/16",
            "default_network_acl_id": "acl-0f372fe5113dc369b",
            "default_route_table_id": "rtb-0e237489404ffe671",
            "default_security_group_id": "sg-07fe6b03e3590a37e",
            "dhcp_options_id": "dopt-028ce7f783256ad01",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008e074806b4a54e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e237489404ffe671",
            "owner_id": "152657297141",
            "tags": {
              "Name": "xdp-vpc"
            },
            "tags_all": {
              "Name": "xdp-vpc"
            }
          }
        }
      ]
    }
  ]
}